# Green-Job-Agent

./: .env.example  .gitattributes  .gitignore  PROGRESS.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  executor.py  green_career_agent.py  planner.py
data/: green_jobs_india.json
src/green_jobs/: __init__.py  auth.py  db.py
tests/: test_auth.py  test_db.py  test_tools.py
tools/: __init__.py  knowledge_tool.py  report_tool.py  search_tool.py
